banner section complete

--- a/index.html
+++ b/index.html
@@ -5,8 +5,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 02</title>
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/c39ee85a76.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <!-- Header section starts here -->
+     <header>
+        <nav class="nav-container">
+            <div class="nav-logo">
+                <p class="nav-title">Fitness</p>
+            </div>
+            <div class="nav-main">
+                <p><span class="home">Home</span></p>
+                <p>Service</p>
+                <p>Contact</p>
+                <p>About</p>
+            </div>
+            <div class="navigation" style="color: white;"><i class="fa-solid fa-bars"></i></div>
+        </nav>
+        <div class="banner-container">
+            <div class="banner-content">
+                <h3 class="banner-title">Get body in <br><span class="shape">shape</span> & stay <br>healthy</h3>
+                <p class="banner-description description-style">
+                    A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!
+                </p>
+                <div class="btn-flex">
+                    <div><button class="btn-primary">Join Club Now!</button></div>
+                <div><button id="download">Download App</button></div>
+                </div>
+            </div>
+            <div class="banner-img">
+                <img src="./images/banner-image.png" alt="loadings">
+                <div class="btn-tutorial">
+                    <p class="btn-tutorial-title">500+</p>
+                    <p class="description-style">Free Workout Videos</p>
+                </div>
+                <div class="btn-tutorial btn-video">
+                    <div class="ball"></div>
+                    <div>
+                        <p class="btn-tutorial-title">350+</p>
+                    <p class="description-style">Video tutorial</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </header>
+    <!-- Header section ends here -->
+
+    <!-- Header section starts here -->
+     <main>
+
+     </main>
+    <!-- Header section ends here -->
+
+    <!-- Header section starts here -->
+     <footer>
+
+     </footer>
+    <!-- Header section ends here -->
 </body>
 </html>
