habit section structure create

--- a/index.html
+++ b/index.html
@@ -53,7 +53,37 @@
 
     <!-- Header section starts here -->
      <main>
+      <!-- Habit section starts here -->
+       <section class="habit-section">
+            <div class="habit-text-container">
+                <h4 class="habit-text-title">Change Your Habits</h4>
+                <p class="habit-text-description description-style">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="habit-card-container">
+                <div class="habit-card">
+                    <img src="./images/habit-1.png" class="habit-card-img" alt="loadings">
+                    <p class="habit-card-title">Movement</p>
+                    <p class="habit-card-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="./images/habit-2.png" class="habit-card-img" alt="loadings">
+                    <p class="habit-card-title">Time</p>
+                    <p class="habit-card-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="./images/habit-3.png" class="habit-card-img" alt="loadings">
+                    <p class="habit-card-title">Practice</p>
+                    <p class="habit-card-description">We believe fitness should be accessible to everyone</p>
+                </div>
+                <div class="habit-card">
+                    <img src="./images/habit-4.png" class="habit-card-img" alt="loadings">
+                    <p class="habit-card-title">Weight Loss</p>
+                    <p class="habit-card-description">We believe fitness should be accessible to everyone</p>
+                </div>
+            </div>
 
+       </section>
+       <!-- Habit section ends here -->
      </main>
     <!-- Header section ends here -->
 
