habit section responsive

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
                 <div class="habit-card">
                     <img src="./images/habit-1.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Movement</p>
-                    <p class="habit-card-description description-style">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img src="./images/habit-2.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Time</p>
-                    <p class="habit-card-description description-style">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img src="./images/habit-3.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Practice</p>
-                    <p class="habit-card-description description-style">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img src="./images/habit-4.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Weight Loss</p>
-                    <p class="habit-card-description description-style">We believe fitness should be accessible to everyone</p>
+                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
                 </div>
             </div>
 
