run section structure creat

--- a/index.html
+++ b/index.html
@@ -84,6 +84,23 @@
 
        </section>
        <!-- Habit section ends here -->
+
+       <!-- Run Mils section starts here -->
+        <section>
+            <div class="run-container">
+                <div class="run-text-container">
+                    <h4 class="run-text-title">Run an Extra Mile Easily</h4>
+                    <p class="run-text-description">
+                        “Running an extra mile” is more than an idiom. It has latent in it the spirit which is more than that extra mile on athletic fields.
+                    </p>
+                    <button class="btn-primary">Join Now</button>
+                </div>
+                <div class="run-img-container">
+                    <img src="./images/run.jpg" alt="loadings">
+                </div>
+            </div>
+        </section>
+        <!-- Run Mils section ends here -->
      </main>
     <!-- Header section ends here -->
 
