update habit section

--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
                 <div class="habit-card">
                     <img src="./images/habit-1.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Movement</p>
-                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
+                    <p class="habit-card-description description-style">Gym accessible to everyone</p>
                 </div>
                 <div class="habit-card">
                     <img src="./images/habit-2.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Time</p>
-                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
+                    <p class="habit-card-description description-style">Exercise should done on time</p>
                 </div>
                 <div class="habit-card">
                     <img src="./images/habit-3.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Practice</p>
-                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
+                    <p class="habit-card-description description-style">Must practice regularly regularly</p>
                 </div>
                 <div class="habit-card">
                     <img src="./images/habit-4.png" class="habit-card-img" alt="loadings">
                     <p class="habit-card-title">Weight Loss</p>
-                    <p class="habit-card-description description-style">We believe fitness should be <br> accessible to everyone</p>
+                    <p class="habit-card-description description-style">Exercising reduces excess weight</p>
                 </div>
             </div>
 
@@ -86,17 +86,17 @@
        <!-- Habit section ends here -->
 
        <!-- Run Mils section starts here -->
-        <section>
+        <section class="run-section">
             <div class="run-container">
                 <div class="run-text-container">
                     <h4 class="run-text-title">Run an Extra Mile Easily</h4>
-                    <p class="run-text-description">
+                    <p class="run-text-description description-style">
                         “Running an extra mile” is more than an idiom. It has latent in it the spirit which is more than that extra mile on athletic fields.
                     </p>
-                    <button class="btn-primary">Join Now</button>
+                    <button class="btn-primary join">Join Now</button>
                 </div>
                 <div class="run-img-container">
-                    <img src="./images/run.jpg" alt="loadings">
+                    <img src="./images/runing.jpg" alt="loadings">
                 </div>
             </div>
         </section>
