gym section structure create

--- a/index.html
+++ b/index.html
@@ -101,6 +101,28 @@
             </div>
         </section>
         <!-- Run Mils section ends here -->
+         <!-- Traning section starts here -->
+          <section class="gym-section">
+                <div class="traning-text-container">
+                    <h4 class="traning-text-title">Trainings and Exercises</h4>
+                    <p class="traning-text-description">When it comes to strength training for beginners . All it takes are some fundamental moves, consistency, and patience.</p>
+                </div>
+                <div class="row-1">
+                    <div class="gym-card">
+                        <img src="./images/exercise1.jpg" alt="loadings">
+                        <p class="gym-card-description-bottom">Flexibility</p>
+                    </div>
+                    <div class="gym-card">
+                        <img src="./images/exercise2.png" alt="loadings">
+                        <p class="gym-card-description">Push-up</p>
+                    </div>
+                    <div class="gym-card">
+                        <img src="./images/exercise3.png" alt="loadings">
+                        <p class="gym-card-description-bottom">Leg Press: Works the quadriceps and glutes</p>
+                    </div>
+                </div>
+          </section>
+          <!-- Traning section ends here -->
      </main>
     <!-- Header section ends here -->
 
