team section responsive complete

--- a/index.html
+++ b/index.html
@@ -102,27 +102,65 @@
         </section>
         <!-- Run Mils section ends here -->
          <!-- Traning section starts here -->
-          <section class="gym-section">
+          <!-- <section class="gym-section">
                 <div class="traning-text-container">
                     <h4 class="traning-text-title">Trainings and Exercises</h4>
                     <p class="traning-text-description">When it comes to strength training for beginners . All it takes are some fundamental moves, consistency, and patience.</p>
                 </div>
                 <div class="row-1">
-                    <div class="gym-card">
+                    <div class="gym-card" id="exercise1">
                         <img src="./images/exercise1.jpg" alt="loadings">
                         <p class="gym-card-description-bottom">Flexibility</p>
                     </div>
-                    <div class="gym-card">
+                    <div class="gym-card" id="exercise2">
                         <img src="./images/exercise2.png" alt="loadings">
                         <p class="gym-card-description">Push-up</p>
                     </div>
-                    <div class="gym-card">
-                        <img src="./images/exercise3.png" alt="loadings">
+                    <div class="gym-card" id="exercise3">
+                        <img src="./images/exercise3.png"  alt="loadings">
                         <p class="gym-card-description-bottom">Leg Press: Works the quadriceps and glutes</p>
                     </div>
                 </div>
-          </section>
+          </section> -->
           <!-- Traning section ends here -->
+
+          <!-- team section starts here -->
+           <section class="team-section">
+            <div class="team-text-container">
+                <h4 class="team-text-title">Meet Our Team</h4>
+                <p class="team-text-description description-style">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+            </div>
+            <div class="team-row-1">
+                <div class="team-card" id="overlay">
+                    <img src="./images/trainer1.png" alt="loadings">
+                    <p class="trainer-name">Jerome Bell <br><span class="trainer">Trainer</span></p>
+                </div>
+                <div class="team-card">
+                    <img src="./images/trainer2.png" alt="loadings">
+                    <p class="trainer-name">Cameron Willi <br><span class="trainer">Trainer</span></p>
+                </div>
+                <div class="team-card">
+                    <img src="./images/trainer3.png" alt="loadings">
+                    <p class="trainer-name">Darrell Steward <br><span class="trainer">Trainer</span></p>
+                </div>
+            </div>
+            <div class="team-row-2">
+                <div class="team-card">
+                    <img src="./images/trainer4.png" alt="loadings">
+                    <p class="trainer-name">Dianne Russell <br><span class="trainer">Trainer</span></p>
+                </div>
+                <div class="team-card">
+                    <img src="./images/trainer5.png" alt="loadings">
+                    <p class="trainer-name">Cody Fisher <br><span class="trainer">Trainer</span></p>
+                </div>
+                <div class="team-card">
+                    <img src="./images/trainer6.png" alt="loadings">
+                    <p class="trainer-name">Theresa Webb <br><span class="trainer">Trainer</span></p>
+                </div>
+            </div>
+           </section>
+           <!-- team section starts here -->
+
      </main>
     <!-- Header section ends here -->
 
