--- a/index.html
+++ b/index.html
@@ -165,27 +165,30 @@
 
     <!-- Header section starts here -->
      <footer class="footer">
-        <div class="footer-container">
-            <div class="fitness-container">
-                <p class="nav-title">Fitness</p>
-                <p class="description-style">We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With <br>hundreds of professional workouts.</p>
+        <div class="footer-section-container">
+            <div class="footer-container">
+                <div class="fitness-container">
+                    <p class="nav-title footer-title">Fitness</p>
+                    <p class="description-style">We believe fitness should be accessible to <br> everyone,everywhere, regardless of income <br> or access to a gym. With hundreds of <br>professional workouts.</p>
+                </div>
+                <div class="about-us">
+                    <h3 class="about-title">Get Started</h3>
+                    <p class="footer-item">Service</p>
+                    <p class="footer-item">Contact Us</p>
+                    <p class="footer-item">Affiliate Program</p>
+                    <p class="footer-item">About-Us</p>
+                </div>
+                <div class="platform-container">
+                    <h3 class="about-title">Get Started</h3>
+                    <p class="footer-item">Fitness</p>
+                    <p class="footer-item">Platform</p>
+                    <p class="footer-item">Workout Libary</p>
+                    <p class="footer-item">App Design</p>
+                </div>
             </div>
-            <div class="about-us">
-                <h3 class="about-title">Get Started</h3>
-                <p class="footer-item">Service</p>
-                <p class="footer-item">Contact Us</p>
-                <p class="footer-item">Affiliate Program</p>
-                <p class="footer-item">About-Us</p>
-            </div>
-            <div class="platform-container">
-                <h3 class="about-title">Get Started</h3>
-                <p class="footer-item">Fitness</p>
-                <p class="footer-item">Platform</p>
-                <p class="footer-item">Workout Libary</p>
-                <p class="footer-item">App Design</p>
-            </div>
+            <hr>
+            <p class="copy">All right reserved @Fitness 2024</p>
         </div>
-        <hr>
      </footer>
     <!-- Header section ends here -->
 </body>
