--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                     A huge selection of health and fitness content, healthy recipes and transformation stories to help you get fit and stay fit!
                 </p>
                 <div class="btn-flex">
-                    <div><button class="btn-primary">Join Club Now!</button></div>
-                <div><button id="download">Download App</button></div>
+                    <div><button class="join" >Join Club Now!</button></div>
+                <div><button class="join" id="club">Download App</button></div>
                 </div>
             </div>
             <div class="banner-img">
@@ -93,7 +93,7 @@
                     <p class="run-text-description description-style">
                         “Running an extra mile” is more than an idiom. It has latent in it the spirit which is more than that extra mile on athletic fields.
                     </p>
-                    <button class="btn-primary join">Join Now</button>
+                    <button class="join" id="now-btn">Join Now</button>
                 </div>
                 <div class="run-img-container">
                     <img src="./images/runing.jpg" alt="loadings">
