gym section responsive

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
         </section>
         <!-- Run Mils section ends here -->
          <!-- Traning section starts here -->
-          <!-- <section class="gym-section">
+          <section class="gym-section">
                 <div class="traning-text-container">
                     <h4 class="traning-text-title">Trainings and Exercises</h4>
-                    <p class="traning-text-description">When it comes to strength training for beginners . All it takes are some fundamental moves, consistency, and patience.</p>
+                    <p class="traning-text-description description-style">When it comes to strength training for beginners . All it takes are some fundamental <br>moves, consistency,and patience.</p>
                 </div>
                 <div class="row-1">
                     <div class="gym-card" id="exercise1">
@@ -114,14 +114,29 @@
                     </div>
                     <div class="gym-card" id="exercise2">
                         <img src="./images/exercise2.png" alt="loadings">
-                        <p class="gym-card-description">Push-up</p>
+                        <p class="gym-card-description-top-left">Push-up</p>
                     </div>
-                    <div class="gym-card" id="exercise3">
+                    <div class="gym-card hidden">
                         <img src="./images/exercise3.png"  alt="loadings">
                         <p class="gym-card-description-bottom">Leg Press: Works the quadriceps and glutes</p>
                     </div>
                 </div>
-          </section> -->
+                <div class="row-2">
+                    <div class="gym-card" id="exercise1">
+                        <img src="./images/exercise4.png" alt="loadings">
+                        <p class="gym-card-description-top-right">Leg Press: Works the  quadriceps and glutes</p>
+                    </div>
+                    <div class="gym-card">
+                        <img src="./images/exercise5.jpg" alt="loadings">
+                        <p class="gym-card-description-bottom">Leg Press: Works the quadriceps and glutes</p>
+                    </div>
+                    <div class="gym-card hidden">
+                        <img src="./images/exercise6.jpg"  alt="loadings">
+                        <p class="gym-card-description-bottom">Leg Press:Works the <br> quadriceps and glutes</p>
+                    </div>
+                </div>
+                 
+          </section>
           <!-- Traning section ends here -->
 
           <!-- team section starts here -->
