--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
                 <h4 class="team-text-title">Meet Our Team</h4>
                 <p class="team-text-description description-style">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
             </div>
+           <div class="team-row-container">
             <div class="team-row-1">
                 <div class="team-card" id="overlay">
                     <img src="./images/trainer1.png" alt="loadings">
@@ -173,6 +174,7 @@
                     <p class="trainer-name">Theresa Webb <br><span class="trainer">Trainer</span></p>
                 </div>
             </div>
+           </div>
            </section>
            <!-- team section starts here -->
       </main>
