gym section image color

--- a/index.html
+++ b/index.html
@@ -108,29 +108,29 @@
                     <p class="traning-text-description description-style">When it comes to strength training for beginners . All it takes are some fundamental <br>moves, consistency,and patience.</p>
                 </div>
                 <div class="row-1">
-                    <div class="gym-card" id="exercise1">
+                    <div class="gym-card overlay-1">
                         <img src="./images/exercise1.jpg" alt="loadings">
                         <p class="gym-card-description-bottom">Flexibility</p>
                     </div>
-                    <div class="gym-card" id="exercise2">
+                    <div class="gym-card overlay-2">
                         <img src="./images/exercise2.png" alt="loadings">
                         <p class="gym-card-description-top-left">Push-up</p>
                     </div>
-                    <div class="gym-card hidden">
+                    <div class="gym-card hidden overlay-3">
                         <img src="./images/exercise3.png"  alt="loadings">
                         <p class="gym-card-description-bottom">Leg Press: Works the quadriceps and glutes</p>
                     </div>
                 </div>
                 <div class="row-2">
-                    <div class="gym-card" id="exercise1">
+                    <div class="gym-card overlay-4">
                         <img src="./images/exercise4.png" alt="loadings">
                         <p class="gym-card-description-top-right">Leg Press: Works the  quadriceps and glutes</p>
                     </div>
-                    <div class="gym-card">
+                    <div class="gym-card overlay-5">
                         <img src="./images/exercise5.jpg" alt="loadings">
                         <p class="gym-card-description-bottom">Leg Press: Works the quadriceps and glutes</p>
                     </div>
-                    <div class="gym-card hidden">
+                    <div class="gym-card hidden overlay-6">
                         <img src="./images/exercise6.jpg"  alt="loadings">
                         <p class="gym-card-description-bottom">Leg Press:Works the <br> quadriceps and glutes</p>
                     </div>
@@ -147,8 +147,8 @@
             </div>
            <div class="team-row-container">
             <div class="team-row-1">
-                <div class="team-card" id="overlay">
-                    <img src="./images/trainer1.png" alt="loadings">
+                <div class="team-card">
+                    <img src="./images/trainer1.png"  id="overlay" alt="loadings">
                     <p class="trainer-name">Jerome Bell <br><span class="trainer">Trainer</span></p>
                 </div>
                 <div class="team-card">
